--- a/public/curriculum-vitae/head.html
+++ b/public/curriculum-vitae/head.html
@@ -1,4 +1,5 @@
-    <title>curriculum-vitae</title>
+    <title>Curriculum Vitae</title>
     <link rel='preconnect' href='https://fonts.gstatic.com'>
     <link href='https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap' rel='stylesheet'>
     <link href='./style.css' rel='stylesheet'/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
