first cv working

--- a/public/cv/main.html
+++ b/public/cv/main.html
@@ -1,3 +1,10 @@
-    <main id='main'>
-      <h1>Hello World!</h1>
-    </main>
+<main id='main'>
+  <div class="container">
+    <a href="cv_victor_reipur.html">
+        <img src="cv_preview.jpg" alt="CV Preview" class="cv-image">
+    </a>
+    <div>
+        <a href="cv_victor_reipur.pdf" download class="download-button">Download PDF</a>
+    </div>
+</div>
+</main>
