--- a/public/cv/main.html
+++ b/public/cv/main.html
@@ -4,7 +4,10 @@
         <img src="cv_preview.jpg" alt="CV Preview" class="cv-image">
     </a>
     <div>
-        <a href="cv_victor_reipur.pdf" download class="download-button">Download PDF</a>
+        <a href="victor_cv.pdf" download class="download-button">Download PDF</a>
     </div>
+    <div class="source-code-link">
+      <a href="cv.md" download="cv_victor_reipur.md">Download cv source</a>
+  </div>
 </div>
 </main>
